Add more text and styles.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 			<h1>Ryan Poplin | Portfolio</h1>
 		</header>
 		<header id="secondary-header">
-			<h2>Hi. My name's Ryan Poplin. I enjoy coding, writing music, and having ardent conversations.</h2>
+			<h2>Hi. My name's <em>Ryan Poplin</em>. I enjoy coding, writing music, and having ardent conversations.</h2>
+			<p>Check out some of the work I've done below...</p>
 		</header>
 		<section id="primary-section">
 			<article class="core-content">
@@ -21,8 +22,14 @@
 			</article>
 		</section>
 		<footer id="primary-footer">
-			<p id="contentinfo">Ryan Poplin | 2013</p>
 			<p id="text-editor"><code>var frontEndWebDeveloper = true;</code></p>
+		</footer>
+		<footer id="secondary-footer">
+			<p>So, you want more information about me? Awesome! I recently graduated from <em>The Iron Yard Academy.</em> There I learned the ins and outs of front end web engineering. In my free time, I'm learning how to control the MongoDB/Mongoose, Express.js, Backbone.js, and Node.js development stack.</p>
+			<p>Want to talk? Here's my info:</p>
+			<p>- Cell: 864-360-1231</p>
+			<p>- Email: mobileupstate@gmail.com</p>
+			<p>- GitHub: https://github.com/ryanpoplin</p>
 		</footer>
 	</div>
 	<script src="scripts/jquery.js"></script>
