Added additional styles, future pure CSS image-slider use file, cleaned up Backbone.js structure.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
 		</section>
 		<footer id="primary-footer">
 			<p id="text-editor"><code>var frontEndWebDeveloper = true;</code></p>
+			<img src="arrow.png" alt="arrow" class="arrow-img">
 		</footer>
 		<footer id="secondary-footer">
-			<p>So, you want more information about me? Awesome! I recently graduated from <em>The Iron Yard Academy.</em> There I learned the ins and outs of front end web engineering. In my free time, I'm learning how to control the MongoDB/Mongoose, Express.js, Backbone.js, and Node.js development stack.</p>
+			<p>So, you want more information about me? Awesome! I recently graduated from <a href="http://theironyard.com/education/" target="_blank"><em>The Iron Yard Academy</em></a>. There I learned the ins and outs of front end web engineering. In my free time, I'm learning how to control the MongoDB/Mongoose, Express.js, Backbone.js, and Node.js development stack.</p>
 			<p>Want to talk? Here's my info:</p>
 			<p>- Cell: 864-360-1231</p>
 			<p>- Email: mobileupstate@gmail.com</p>
