Added more styles and content with the Backbone application.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<p>Check out some of the work I've done below...</p>
 		</header>
 		<section id="primary-section">
-			<article class="core-content">
+			<article class="main-content">
 				<!-- It's a Backbone application... -->
 			</article>
 		</section>
