Added more styles.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,8 @@
 			<p>Check out some of the work I've done below...</p>
 		</header>
 		<section id="primary-section">
-			<article class="main-content-container">
-
-			</article>	
+			<article class="main-content-container"></article>	
 		</section>
-		<article class=""></article>
 		<footer id="primary-footer">
 			<p id="text-editor"><code>var frontEndWebDeveloper = true;</code></p>
 			<img src="arrow.png" alt="arrow" id="arrow-img">
