Fixed styles error.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="utf-8">
 	<meta viewport="device=device-width">
-	<link rel="shortcut icon" href="http://ryanpoplin.github.io/favicon.ico" />
 	<title>Ryan Poplin</title>
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="styles/core.css">
@@ -30,7 +29,7 @@
 			<p>- Cell: 864-360-1231</p>
 			<p>- Email: mobileupstate@gmail.com</p>
 			<p>- GitHub: https://github.com/ryanpoplin</p>
-			<a href="http://www.w3.org/html/logo/">
+			<a href="http://www.w3.org/html/logo/" target="_blank">
 				<img id="semantics" src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
 			</a>
 		</footer>
