--- a/index.html
+++ b/index.html
@@ -1,55 +1,78 @@
 <!doctype html>
+
 <html lang="en">
+
 <head>
+	
 	<meta charset="utf-8">
 	<meta viewport="device=device-width">
 	<title>Ryan Poplin</title>
+	<link rel="stylesheet" href="styles/reset.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="styles/core.css">
 	<!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+
 </head>
+
 <body>
-	<DIV id="primary-container">
-		<header id="primary-header">
-			<h1>Ryan Poplin | Portfolio</h1>
+		
+	<header id="primary-header">
+		<div class="primary-container">
+			<h1>[ Ryan Poplin | Portfolio ]</h1>
 			<nav id="primary-navigation">
 				<a href="#/"><p class="nav">Home</p></a>
 				<a href="#/blog"><p class="nav">Blog</p></a>
 			</nav>
-		</header>
-		<header id="secondary-header">
-			<h2>Hi. My name's <em>Ryan Poplin</em>. I enjoy coding, writing music, and having ardent conversations.</h2>
-			<p>Check out some of the work I've done below...</p>
-		</header>
-		<section id="primary-section">
+		</div>
+	</header>
+	
+	<header id="secondary-header">
+		<div class="primary-container">
+			<div class="secondary-header-container"></div>
+		</div>
+	</header>
+	
+	<section id="primary-section">
+		<div class="primary-container">
 			<article class="main-content-container"></article>	
-		</section>
-		<footer id="primary-footer">
+		</div>
+	</section>
+	
+	<footer id="primary-footer">
+		<div class="primary-container">
 			<p id="text-editor"><code>var frontEndWebDeveloper = true;</code></p>
-			<img src="arrow.png" alt="arrow" id="arrow-img">
-		</footer>
-		<footer id="secondary-footer">
-			<p>So, you want more information about me? Awesome! I recently graduated from <a href="http://theironyard.com/education/" target="_blank"><em>The Iron Yard Academy</em></a>. There I learned the ins and outs of front end web engineering. In my free time, I'm learning how to control the MongoDB/Mongoose, Express.js, Backbone.js, and Node.js development stack.</p>
+			<img src="images/arrow.png" alt="arrow" id="arrow-img">
+		</div>
+	</footer>
+	
+	<footer id="secondary-footer">
+		<div class="primary-container">
+			<p>So, you want more information about me? Awesome! I recently graduated from <a href="http://theironyard.com/education/" target="_blank" class="link-decoration"><em>The Iron Yard Academy</em></a>. There I learned the ins and outs of front end web engineering. In my free time, I'm learning how to control the MongoDB/Mongoose, Express.js, Backbone.js, and Node.js development stack.</p>
 			<p>Want to talk? Here's my info:</p>
 			<p>- Cell: 864-360-1231</p>
 			<p>- Email: mobileupstate@gmail.com</p>
 			<p>- GitHub: https://github.com/ryanpoplin</p>
-			<a href="http://www.w3.org/html/logo/" target="_blank">
-				<img id="semantics" src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5 Powered with CSS3 / Styling, and Semantics" title="HTML5 Powered with CSS3 / Styling, and Semantics">
-			</a>
-		</footer>
-		<script type="text/template" id="main-content-template">
-			<a href=<%= link %> target="_blank" class="main-links"><div class="main-content">
-				<h4 class="main-content-heading"><%= title %></h4>
-			</div></a>
-		</script>
-		<script type="text/template" id="blog-content-template">
-			<h3 class="blog-content-heading"><%= title %></h3>
-			<p class="blog-content-paragraph"><%= content %></p>
-		</script>
-	</DIV>
+		</div>
+	</footer>
+	
+	<script type="text/template" id="secondary-header-template">
+		<h2><%= heading %></h2>
+		<p><%= paragraph %></p>
+	</script>
+
+	<script type="text/template" id="main-content-template">
+		<a href=<%= link %> target="_blank" class="main-links"><div class="main-content">
+			<h4 class="main-content-heading"><%= title %></h4>
+		</div></a>
+	</script>
+
+	<script type="text/template" id="blog-content-template">
+		<h3 class="blog-content-heading"><%= title %></h3>
+		<p class="blog-content-paragraph"><%= content %></p>
+	</script>
+	
 	<script src="scripts/jquery.js"></script>
 	<script src="scripts/underscore.js"></script>
 	<script src="scripts/backbone.js"></script>
@@ -59,5 +82,7 @@
 	<script src="scripts/views/main-content.js"></script>
 	<script src="scripts/views/main-content-listing.js"></script>
 	<script src="scripts/router.js"></script>
+
 </body>
+
 </html>
